# empathy

./: .gitignore  CONTRIBUTORS  GOSSIP-RELICENSING.txt  MAINTAINERS  Makefile.am  NEWS  autogen.sh  configure.ac  empathy.doap  release.py
data/: .gitignore  Empathy.AudioVideo.client  Empathy.Auth.client  Empathy.client  Makefile.am  codec-preferences  element-properties  empathy-accounts.desktop.in.in  empathy.convert  empathy.desktop.in.in  empathy.schemas.in  org.freedesktop.Telepathy.Client.Empathy.AudioVideo.service.in  org.freedesktop.Telepathy.Client.Empathy.Auth.service.in  org.freedesktop.Telepathy.Client.Empathy.Chat.service.in  org.freedesktop.Telepathy.Client.Empathy.service.in  org.gnome.Empathy.gschema.xml  org.gnome.Empathy.gschema.xml.in
data/icons/: Makefile.am
extensions/: Authentication_TLS_Certificate.xml  Channel_Type_Server_TLS_Connection.xml  Makefile.am  all.xml  generic-types.xml  misc.xml
help/: .gitignore  Makefile.am
help/C/: account-irc.page  account-jabber.page  accounts-window.page  add-account.page  add-contact.page  audio-call.page  audio-video.page  change-status.page  change_status.page  create-account.page  disable-account.page  empathy.xml  favorite-rooms.page  geolocation-not-showing.page  geolocation-privacy.page  geolocation-supported.page  geolocation-turn.page  geolocation-what-is.page  geolocation.page  group-conversations.page  import-account.page  index.page  introduction.page  irc-account.page  irc-join-pwd.page  irc-join-room.page  irc-manage.page  irc-nick-password.page  irc-send-file.page  irc-sending-file.page  irc-start-conversation.page  link-contacts.page  offline-contacts.page  prev-conv.page  prob-conn-acctdisabled.page  prob-conn-auth.page  prob-conn-name.page  prob-conn-neterror.page  prob-conn.page  problems-connecting.page  (+12 more)
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/it/: it.po
help/sl/: sl.po
help/zh_CN/: zh_CN.po
libempathy/: Makefile.am  empathy-account-manager.c  empathy-account-manager.h  empathy-account-settings.c  empathy-account-settings.h  empathy-account.c  empathy-account.h  empathy-auth-factory.c  empathy-auth-factory.h  empathy-call-factory.c  empathy-call-factory.h  empathy-call-handler.c  empathy-call-handler.h  empathy-chatroom-manager.c  empathy-chatroom-manager.h  empathy-chatroom.c  empathy-chatroom.h  empathy-connection-managers.c  empathy-connection-managers.h  empathy-connectivity.c  empathy-connectivity.h  empathy-contact-groups.c  empathy-contact-list.c  empathy-contact-list.h  empathy-contact-manager.c  empathy-contact-manager.h  empathy-contact.c  empathy-contact.h  empathy-debug.c  empathy-debug.h  empathy-dispatch-operation.c  empathy-dispatch-operation.h  empathy-dispatcher.c  empathy-dispatcher.h  empathy-ft-factory.c  empathy-ft-factory.h  empathy-ft-handler.c  empathy-gsettings.h  empathy-handler.c  empathy-handler.h  (+43 more)
libempathy-gtk/: Makefile.am  empathy-account-assistant.c  empathy-account-chooser.c  empathy-account-chooser.h  empathy-account-widget-aim.ui  empathy-account-widget-generic.ui  empathy-account-widget-groupwise.ui  empathy-account-widget-icq.ui  empathy-account-widget-irc.c  empathy-account-widget-irc.h  empathy-account-widget-irc.ui  empathy-account-widget-jabber.ui  empathy-account-widget-local-xmpp.ui  empathy-account-widget-msn.ui  empathy-account-widget-private.h  empathy-account-widget-sip.c  empathy-account-widget-sip.h  empathy-account-widget-sip.ui  empathy-account-widget-yahoo.ui  empathy-account-widget.c  empathy-account-widget.h  empathy-audio-sink.c  empathy-audio-src.c  empathy-avatar-chooser.c  empathy-avatar-chooser.h  empathy-avatar-image.c  empathy-cell-renderer-activatable.c  empathy-cell-renderer-activatable.h  empathy-cell-renderer-expander.c  empathy-cell-renderer-text.c  empathy-chat-text-view.c  empathy-chat-text-view.h  empathy-chat-view.c  empathy-chat-view.h  empathy-chat.c  empathy-chat.h  empathy-chat.ui  empathy-conf.h  empathy-contact-dialogs.c  empathy-contact-dialogs.h  (+97 more)
nautilus-sendto-plugin/: Makefile.am  empathy-nautilus-sendto.c
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  an.po  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  br.po  ca.po  ca@valencia.po  crh.po  cs.po  da.po  de.po  el.po  en@shaw.po  en_GB.po  eo.po  es.po  et.po  (+48 more)
src/: .gitignore  Makefile.am  cc-empathy-accounts-page.c  cc-empathy-accounts-page.h  cc-empathy-accounts-panel.c  cc-empathy-accounts-panel.h  empathy-about-dialog.c  empathy-account-assistant.c  empathy-account-assistant.h  empathy-accounts-common.c  empathy-accounts-common.h  empathy-accounts-dialog.c  empathy-accounts-dialog.h  empathy-accounts-dialog.ui  empathy-accounts-module.c  empathy-accounts.1  empathy-accounts.c  empathy-accounts.h  empathy-auth-client.c  empathy-auth-helper.c  empathy-auto-salut-account-helper.c  empathy-auto-salut-account-helper.h  empathy-av.c  empathy-call-window-fullscreen.c  empathy-call-window.c  empathy-call-window.ui  empathy-chat-manager.c  empathy-chat-manager.h  empathy-chat-window.c  empathy-chat-window.h  empathy-chat-window.ui  empathy-chat.c  empathy-chatrooms-window.c  empathy-chatrooms-window.ui  empathy-debug-dialog.c  empathy-debug-dialog.h  empathy-debug-window.c  empathy-debug-window.h  empathy-debugger.c  empathy-event-manager.c  (+34 more)
tests/: .gitignore  Makefile.am  check-empathy-chatroom-manager.c  check-empathy-chatroom.c  check-empathy-helpers.c  check-empathy-helpers.h  check-empathy-irc-network-manager.c  check-irc-helper.c  check-libempathy.h  check-main.c  empathy-chatroom-manager-test.c  empathy-chatroom-test.c  empathy-irc-network-manager-test.c  empathy-irc-network-test.c  empathy-irc-server-test.c  empathy-live-search-test.c  empathy-parser-test.c  empathy-utils-test.c  test-empathy-account-assistant.c  test-empathy-protocol-chooser.c  test-helper.c  test-helper.h  test-irc-helper.c  test-irc-helper.h
tests/interactive/: .gitignore  Makefile.am  empetit.c  test-empathy-account-assistant.c  test-empathy-account-chooser.c  test-empathy-protocol-chooser.c
(+12 files in other folders)
