include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = empathy
DOC_INCLUDES = legal.xml
DOC_FIGURES = \
	figures/audio-input-microphone.png \
	figures/available.png \
	figures/away.png \
	figures/busy.png \
	figures/camera-web.png \
	figures/empathy-main-window.png \
	figures/extended-away.png

DOC_PAGES = \
	add-account.page \
	add-contact.page \
	audio-call.page \
	audio-video.page \
	change-status.page \
	create-account.page \
	disable-account.page \
	group-conversations.page \
	index.page \
	introduction.page \
	irc-account.page \
	irc-join-pwd.page \
	irc-join-room.page \
	irc-manage.page \
	irc-nick-password.page \
	irc-sending-file.page \
	irc-start-conversation.page \
	offline-contacts.page \
	prob-conn-acctdisabled.page \
	prob-conn-auth.page \
	prob-conn-name.page \
	prob-conn-neterror.page \
	prob-conn.page \
	remove-account.page \
	salut-protocol.page \
	send-file.page \
	send-message.page \
	set-custom-status.page \
	share-desktop.page \
	start-conversation.page \
	status-icons.page \
	video-call.page


DOC_LINGUAS = ca cs de el en_GB es fi fr it ru sv
dist-hook: doc-dist-hook
