include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = empathy
DOC_FIGURES = \
	figures/audio-input-microphone.png \
	figures/available.png \
	figures/away.png \
	figures/busy.png \
	figures/camera-web.png \
	figures/empathy-main-window.png \
	figures/empathy-logo.png \
	figures/gtk-add.png \
	figures/gtk-edit.png \
	figures/gtk-remove.png \
	figures/offline.png

DOC_PAGES = \
	account-irc.page \
	account-jabber.page \
	accounts-window.page \
	add-account.page \
	add-contact.page \
	audio-call.page \
	audio-video.page \
	change-status.page \
	create-account.page \
	disable-account.page \
	favorite-rooms.page \
	geolocation.page \
	geolocation-not-showing.page \
	geolocation-privacy.page \
	geolocation-supported.page \
	geolocation-turn.page \
	geolocation-what-is.page \
	group-conversations.page \
	hide-contacts.page \
	import-account.page \
	index.page \
	introduction.page \
	irc-commands.page \
	irc-join-pwd.page \
	irc-join-room.page \
	irc-manage.page \
	irc-nick-password.page \
	irc-send-file.page \
	irc-start-conversation.page \
	license.page \
	prev-conv.page \
	prob-conn-acctdisabled.page \
	prob-conn-auth.page \
	prob-conn-name.page \
	prob-conn-neterror.page \
	prob-conn.page \
	remove-account.page \
	salut-protocol.page \
	send-file.page \
	send-message.page \
	set-custom-status.page \
	share-desktop.page \
	status-icons.page \
	video-call.page

DOC_LINGUAS = ca cs de el en_GB es fi fr it ru sv
dist-hook: doc-dist-hook
